--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.2"
+    
   }
 }
