--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.2",
-    "openai": "^4.28.4"
+    "openai": "^4.28.4",
+    "uuid": "^9.0.1"
   }
 }
