--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "next": "^14.1.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.2"
-    
   }
 }
