randomised flashcards , fixed some issues when no flashcards remain, added to main menu a greeting box , remade stories intermediate menu, added text formating to stories

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "array-shuffle": "^3.0.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "next": "^14.1.2",
